Misc Sonar / Nullability improvements