@@ -147,7 +147,7 @@ class ForwardHandlingTest extends ConfiguredTestBase {
 		assertDoesNotThrow(pipe::configure);
 		List<String> warnings = getConfigurationWarnings().getWarnings();
 		assertEquals(1, warnings.size());
-		assertTrue(warnings.get(0).contains("the forward [thisForwardDoesntExist] does not exist and cannot be used in this pipe"));
+		assertTrue(warnings.getFirst().contains("the forward [thisForwardDoesntExist] does not exist and cannot be used in this pipe"));
 	}
 
 	@ParameterizedTest
@@ -165,7 +165,7 @@ class ForwardHandlingTest extends ConfiguredTestBase {
 		assertDoesNotThrow(pipe::configure);
 		List<String> warnings = getConfigurationWarnings().getWarnings();
 		assertEquals(1, warnings.size());
-		assertTrue(warnings.get(0).contains("pipe contains a forward without a name"));
+		assertTrue(warnings.getFirst().contains("pipe contains a forward without a name"));
 	}
 
 	@Test
@@ -181,7 +181,7 @@ class ForwardHandlingTest extends ConfiguredTestBase {
 		assertDoesNotThrow(pipe::configure);
 		List<String> warnings = getConfigurationWarnings().getWarnings();
 		assertEquals(1, warnings.size());
-		assertTrue(warnings.get(0).contains("the forward [success] is already registered on this pipe"));
+		assertTrue(warnings.getFirst().contains("the forward [success] is already registered on this pipe"));
 	}
 
 	@Test
