@@ -17,7 +17,7 @@ public class GenericDbmsSupportTest {
 		String query4 = "ooo BEGIN BEGIN ooo; IF (ooo) THEN ooo; END IF; ooo; IF (ooo) THEN ooo; END IF; END;END;";
 		List<String> result = (new GenericDbmsSupport()).splitQuery(query1 + query2 + query3 + query4);
 		assertEquals(4, result.size());
-		assertEquals(query1, result.get(0));
+		assertEquals(query1, result.getFirst());
 		assertEquals(query2, result.get(1));
 		assertEquals(query3, result.get(2));
 		assertEquals(query4, result.get(3));
